# study-agents

./: .gitignore  DEPLOYMENT-QUICKSTART-20260311-025842.md  GETTING_STARTED.md  README.md  SETUP.md  bootstrap.sh
backend-vps/: .dockerignore  .env.example  DEPLOYMENT.md  DEPLOYMENT_RUN_2026-03-26.md  DEPLOYMENT_RUN_2026-03-27_SDA_USB_BACKEND_DEPLOY.md  DEPLOYMENT_RUN_2026-03-27_USB_MIGRATION.md  README.md  README_BACKEND_VPS_QUICKSTART.md  ZIMABOARD_16GB_DEPLOYMENT.md  docker-compose.yml  docker-compose.zimaboard.yml  pyproject.toml  supabase_schema.sql
backend-vps/copilot-frontend/: .env.example  internal.Caddyfile  package-lock.json  package.json
backend-vps/copilot-frontend/app/: globals.css  layout.tsx  page.tsx
backend-vps/copilot-frontend/scripts/: start-with-internal-tls.sh
backend-vps/docker/: Caddyfile  base.Dockerfile  cag.Dockerfile  copilot-frontend.Dockerfile  copilot.Dockerfile  python.Dockerfile  rag.Dockerfile  scenario-frontend.Dockerfile
backend-vps/docker/vault/: .gitignore
backend-vps/domain/: profile_name_template_helper.md
backend-vps/domain/profiles/: FLIR thermographer.json  aws_cloud_nist_800_53_control_mapping_expert.json  expert_aws_cloud_service_mapper_to_NIST_800-53_controls.json  flir-thermographer.json  generic.json  infared_thermographer.json  infrared_thermographer.json  openstack_grc_security_and_privacy_engineer.json  texas_adjuster.json  texas_auto_independent_adjuster.json  texas_expert_independent_insurance_adjuster_all_lines.json  texas_insurance_adjuster.json
backend-vps/prompts/: cag_answer_generation.txt  cag_chunking_strategy.md  cag_entity_extraction.txt  cag_grounding_repair_system.txt  cag_grounding_verifier_system.txt  cag_relationship_extraction.txt  copilot_orchestrator_system.txt  domain_profile_builder_system.txt  domain_profile_builder_user_template.txt  domain_profile_research_query_template.txt  kb_answer_fallback.txt  kb_answer_primary.txt  kb_context_user_prompt_template.txt  kb_fallback_user_prompt_template.txt  kg_edge_extraction.txt  kg_entity_extraction.txt  rag_chunking_user_prompt_template.txt  scenario_answer_structuring.txt  scenario_question_context_template.txt  scenario_structuring_system.txt  scenario_structuring_user_prompt_template.txt  vision_reasoning.txt  web_research_link_extraction_template.txt  web_research_relevance_template.txt
backend-vps/prompts/templates/: cag_answer_generation.base.txt  cag_entity_extraction.base.txt  cag_relationship_extraction.base.txt  domain_profile_builder_system.base.txt  domain_profile_builder_user_template.base.txt  kg_edge_extraction.base.txt  kg_entity_extraction.base.txt  scenario_answer_structuring.base.txt  scenario_question_context_template.base.txt  scenario_structuring_system.base.txt  vision_reasoning.base.txt
backend-vps/scripts/: authelia_user_manage.sh  bootstrap.sh  bootstrap_authelia.sh  bootstrap_internal_tls.sh  bootstrap_vault_nondev.sh  build_bootstrap_package.py  build_release_bundles.py  configure_lan_https.sh  configure_vault.sh  docker_prune_safe.sh  domain_profile_pipeline.py  domain_wizard.py  export_caddy_root_ca.sh  generate_local_api_keys.sh  install_backend_vps.sh  install_zimaboard_16gb.sh  mcp_listtools.py  mcp_smoketest.py  mcp_stdio_wrapper.py  reclaim_disk_space.sh  setup_local_supabase.sh  use_env.sh  validate_backend_stack.sh  validate_gateway_oidc_routes.sh  validate_vault_workflows.sh  validate_zimaboard_stack.sh
backend-vps/src/: __init__.py
backend-vps/src/study_agents/: api_server.py  cag_agent.py  (+27 more)
backend-vps/supabase/: .gitignore  config.toml
backend-vps/tests/: conftest.py  test_domain_profile_agent.py  test_domain_profile_pipeline_ontology.py  test_knowledge_graph.py  test_ollama_cloud.py  test_profile_namespace.py  test_supabase_client_import.py  test_system_prompt.py  test_web_research.py
(+145 files in other folders)
