[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-agents"
version = "0.1.0"
description = "Local agent stack for PDF RAG + vision-driven subject-matter-expert assistance"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "beautifulsoup4",
  "docling[easyocr,tesseract,rapidocr]",
  "fastapi",
  "mcp[cli]",
  "numpy",
  "openai",
  "ollama",
  "pypdf",
  "pymupdf",
  "python-dotenv",
  "requests",
  "supabase",
  "uvicorn",
  "pydantic-ai",
]

[project.optional-dependencies]
vision = [
  "keyboard",
  "mss",
  "pdf2image",
  "Pillow",
  "pytesseract",
  "rapidocr-onnxruntime",
]
full = [
  "keyboard",
  "mss",
  "pdf2image",
  "Pillow",
  "pytesseract",
  "rapidocr-onnxruntime",
  "crawl4ai",
]

[project.scripts]
study-agents-mcp = "study_agents.mcp_server_fixed:main"
study-agents-rag = "study_agents.rag_agent_cli:main"
study-agents-web-research = "study_agents.web_research_agent:main"
study-agents-cag = "study_agents.cag_agent:main"
study-agents-vision = "study_agents.vision_agent:main_loop"
study-agents-graph-inspector = "study_agents.graph_inspector:main"
study-agents-api = "study_agents.api_server:main"
study-agents-kg-visualizer = "study_agents.kg_visualizer_agent:main"
study-agents-manage = "study_agents.orchestrator:main"
study-agents-validate = "study_agents.settings:validate_cli"
